# eplaceai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json  seed.py
schema/: init.sql
src/: api.py  config.py  database.py  main.py
src/audit/: logger.py
src/models/: attendance.py  employee.py  leave.py  payroll.py  travel.py
src/services/: conflict_detector.py  edavki_service.py  payroll_service.py  si_rules.py
src/tools/: read_tools.py  workflow_tools.py  write_tools.py
src/validators/: emso_validator.py  input_validators.py
static/: index.html
tests/: conftest.py  test_payroll_calc.py  test_read_tools.py  test_si_rules.py  test_write_tools.py
